--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -164,12 +164,12 @@
                 </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in ::global.nav_top.parents | orderBy: 'item.value' : reverse">
-                        <a ui-sref="community.dashboard({community_path: item.label, community: nav.nav_communities[item.label], query: '*', location_path: (global.location.key || nav.user.profile.home), top: global.nav_top, communities: global.communities, user: nav.user})" ng-class="{active: global.path.includes('/' + item.label)}" ng-click="cl_working = true">
+                        <a ui-sref="community.dashboard({community_path: item.label, community: global.nav_communities[item.label], query: '*', location_path: (global.location.key || nav.user.profile.home), top: global.nav_top, communities: global.communities, user: nav.user})" ng-class="{active: global.path.includes('/' + item.label)}" ng-click="cl_working = true">
                             <span>
                                 <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
                                 {{::item.label[0].toUpperCase() + item.label.slice(1)}}
                                 <span loading-bars ng-show="cl_working"></span>
-                                <a ng-repeat="c in ::nav.clusters[item.label]" ui-sref="community.dashboard({community_path: c.key, community: nav.nav_communities[c.key], query: '*', location_path: (global.location.key || nav.user.profile.home), top: global.nav_top, communities: global.communities, user: nav.user })" ng-class="{active: global.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:30px;">
+                                <a ng-repeat="c in ::nav.clusters[item.label]" ui-sref="community.dashboard({community_path: c.key, community: global.nav_communities[c.key], query: '*', location_path: (global.location.key || nav.user.profile.home), top: global.nav_top, communities: global.communities, user: nav.user })" ng-class="{active: global.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:30px;">
                                     <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
                                     {{::c.community_profiles[global.location.key].name[0].toUpperCase() + c.community_profiles[global.location.key].name.slice(1);}}
                                     <span loading-bars ng-show="clc_working"></span>
