--- a/app/components/users/user.dashboard.profile.html
+++ b/app/components/users/user.dashboard.profile.html
@@ -20,7 +20,7 @@
                 <ul class="profile-ul">
                     <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Leader:</p>
                     <li ng-repeat="(key, val) in profile.user.roles.leader" class="profile-roles">
-                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
+                        <a ui-sref="community.dashboard({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
                     </li>
                 </ul>
             </div>
@@ -28,7 +28,7 @@
                 <ul class="profile-ul">
                     <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Founder:</p>
                     <li ng-repeat="(key, val) in profile.user.roles.founder" class="profile-roles">
-                        <a ui-sref="{{'community.dashboard.' + profile.communities[key].type + '({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})'}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
+                        <a ui-sref="{{'community.dashboard.' + global.communities[key].type + '({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})'}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
                     </li>
                 </ul>
             </div>
@@ -36,7 +36,7 @@
                 <ul class="profile-ul">
                     <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Investor:</p>
                     <li ng-repeat="(key, val) in profile.user.roles.investor" class="profile-roles">
-                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
+                        <a ui-sref="community.dashboard({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
                 <ul class="profile-ul">
                     <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Mentor:</p>
                     <li ng-repeat="(key, val) in profile.user.roles.mentor" class="profile-roles">
-                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].resource, 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
+                        <a ui-sref="community.dashboard({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
                     </li>
                 </ul>
             </div>
