fixed welcome nav

--- a/app/components/welcome/welcome.invite.html
+++ b/app/components/welcome/welcome.invite.html
@@ -20,7 +20,7 @@
         <div alert-box this-alert="invite.alert"></div>
     </div>
     <h4 style="margin-bottom: 13px;">
-        <a class="btn btn-info pull-left" ui-sref="welcome.companies">Back</a>
+        <a class="btn btn-info pull-left" ui-sref="welcome.skills">Back</a>
         <button ladda="welcome.submitted" class="btn btn-info pull-right" ng-click="welcome.submit()">Finish</button>
     </h4>
 </div>
