check for bugsnag

--- a/app/components/welcome/welcome.profile.html
+++ b/app/components/welcome/welcome.profile.html
@@ -29,7 +29,7 @@
                     <option ng-repeat="parent in welcome.parents">{{ parent }}</option>
                 </select>
                 <div class="m-t-xs" ng-show="!welcome.selectedParent && welcome.submitted">
-                    <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A parent is required.</span>
+                    <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> An industry is required.</span>
                 </div>
                 <br/>
                 Click below to edit your summary.
